[gd_scene load_steps=9 format=2]

[ext_resource path="res://tscn/PlayerPaddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/Game.gd" type="Script" id=2]
[ext_resource path="res://art/pong-bg.png" type="Texture" id=4]
[ext_resource path="res://sounds/lost.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/pickupCoin.wav" type="AudioStream" id=7]
[ext_resource path="res://tscn/Menu.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_blend_mode = 0
glow_hdr_threshold = 0.1

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 4 )

[node name="PlayerPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 782, 300 )

[node name="WinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
position = Vector2( 0, 300 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WinArea"]
stream = ExtResource( 7 )

[node name="LoseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2( 800, 300 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LoseArea"]
stream = ExtResource( 5 )

[node name="Menu" parent="." instance=ExtResource( 8 )]

[node name="BallPosition" type="Position2D" parent="."]
position = Vector2( 400, 300 )

[node name="AIPosition" type="Position2D" parent="."]
position = Vector2( 18, 300 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[connection signal="area_entered" from="WinArea" to="." method="_on_WinArea_area_entered"]
[connection signal="area_entered" from="LoseArea" to="." method="_on_LoseArea_area_entered"]
[connection signal="start_game" from="Menu" to="." method="_on_Menu_start_game"]
